--- a/views/accessories.hbs
+++ b/views/accessories.hbs
@@ -32,16 +32,16 @@
         <table id="accessories">
             <thead>
                 <tr>
-                    {{#each data.[0]}}
+                    {{#each data.fields}}
                     <th>
-                        {{@key}}
+                        {{name}}
                     </th>
                     {{/each}}
                 </tr>
             </thead>
         
             <tbody>
-              {{#each data}}
+              {{#each data.rows}}
                 <tr>
                     <td>{{this.accessory_id}}</td>
                     <td>{{this.user_id}}</td>
@@ -61,7 +61,7 @@
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -82,13 +82,13 @@
                     <label>Accessory ID</label>
                     <select name="updateAccessoryID" id="updateAccessoryID">
                         <option value="">Select Accessory</option>
-                        {{#each data}}
+                        {{#each data.rows}}
                         <option value="{{this.accessory_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> User </label>
                     <select name="updateUserID" id="update =UserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -110,7 +110,7 @@
                 <label>Accessory ID</label>
                 <select name="deleteAccessoryID" id="deleteAccessoryID">
                     <option value="">Select Accessory</option>
-                    {{#each data}}
+                    {{#each data.rows}}
                     <option value="{{this.accessory_id}}">{{this.name}}</option>
                     {{/each}}
                 </select><br>              
