--- a/views/jackets.hbs
+++ b/views/jackets.hbs
@@ -34,16 +34,16 @@
         <table id="jackets">
             <thead>
                 <tr>
-                    {{#each data.[0]}}
+                    {{#each data.fields}}
                     <th>
-                        {{@key}}
+                        {{name}}
                     </th>
                     {{/each}}
                 </tr>
             </thead>
         
             <tbody>
-              {{#each data}}
+              {{#each data.rows}}
                 <tr>
                     <td>{{this.jacket_id}}</td>
                     <td>{{this.user_id}}</td>
@@ -63,7 +63,7 @@
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -83,13 +83,13 @@
                 <fieldset class="fields">
                     <label>Jacket ID</label>
                     <select name="updateJacketID" id="updateJacketID">
-                        {{#each data}}
+                        {{#each data.rows}}
                         <option value="{{this.jacket_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> User </label>
                     <select name="updateUserID" id="updateUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -110,7 +110,7 @@
                 <p>Are you sure you wish to delete the following?</p>
                 <label>Jacket ID</label>
                 <select name="deleteJacketID" id="deleteJacketID">
-                    {{#each data}}
+                    {{#each data.rows}}
                     <option value="{{this.jacket_id}}">{{this.name}}</option>
                     {{/each}}
                 </select><br>
