--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,7 +23,8 @@
 <head>
     <meta charset="utf-8">
     <title>Example App</title>
-    <link rel="stylesheet" href="css/style.css"> 
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+
 </head>
 <h1>Your Personal Outfit Manager</h1>
 <nav>
