--- a/views/occasions.hbs
+++ b/views/occasions.hbs
@@ -34,16 +34,16 @@
         <table id="occasions">
             <thead>
                 <tr>
-                    {{#each data.[0]}}
+                    {{#each data.fields}}
                     <th>
-                        {{@key}}
+                        {{name}}
                     </th>
                     {{/each}}
                 </tr>
             </thead>
         
             <tbody>
-              {{#each data}}
+              {{#each data.rows}}
                 <tr>
                     <td>{{this.occasion_id}}</td>
                     <td>{{this.user_id}}</td>
@@ -62,7 +62,7 @@
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -81,13 +81,13 @@
                 <fieldset class="fields">
                     <label>Occasion ID</label>
                     <select name="updateOccasionID" id="updateOccasionID">
-                        {{#each data}}
+                        {{#each data.rows}}
                         <option value="{{this.top_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> User </label>
                     <select name="updateUserID" id="updateUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -107,7 +107,7 @@
                 <p>Are you sure you wish to delete the following?</p>
                 <label>Accessory ID</label>
                 <select name="deleteOccasionID" id="deleteOccasionID">
-                    {{#each data}}
+                    {{#each data.rows}}
                     <option value="{{this.top_id}}">{{this.name}}</option>
                     {{/each}}
                 </select><br>               
