--- a/views/outfitsOccasions.hbs
+++ b/views/outfitsOccasions.hbs
@@ -33,16 +33,16 @@
         <table id="outfitOccasions">
             <thead>
                 <tr>
-                    {{#each data.[0]}}
+                    {{#each data.fields}}
                     <th>
-                        {{@key}}
+                        {{name}}
                     </th>
                     {{/each}}
                 </tr>
             </thead>
         
             <tbody>
-              {{#each data}}
+              {{#each data.rows}}
                 <tr>
                     <td>{{this.outfit_occ_id}}</td>
                     <td>{{this.outfit}}</td>
@@ -60,13 +60,13 @@
                 <fieldset class="fields">
                     <label> Outfit </label>
                     <select name="addOutfitID" id="addOutfitID">
-                        {{#each outfits}}
+                        {{#each outfits.rows}}
                         <option value="{{this.outfit_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> Occasion </label>
                     <select name="addOccasionID" id="addOccasionID">
-                        {{#each occasions}}
+                        {{#each occasions.rows}}
                         <option value="{{this.occasion_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
@@ -83,19 +83,19 @@
                 <fieldset class="fields">
                     <label>Outfit-Occasion ID</label>
                     <select name="outfit_occ_ID" id="outfit_occ_ID">
-                        {{#each data}}
+                        {{#each data.rows}}
                         <option value="{{this.outfit_occ_id}}">{{this.outfit_occ_id}}</option>
                         {{/each}}
                     </select><br> 
                     <label> Outfit </label>
                     <select name="updateOutfitID" id="addOutfitID">
-                        {{#each outfits}}
+                        {{#each outfits.rows}}
                         <option value="{{this.outfit_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> Occasion </label>
                     <select name="updateOccasionID" id="updateOccasionID">
-                        {{#each occasions}}
+                        {{#each occasions.rows}}
                         <option value="{{this.occasion_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
@@ -113,7 +113,7 @@
                 <p>Are you sure you wish to delete the following?</p>
                 <label>Outfit-Occasion ID</label>
                 <select name="outfit_occ_ID" id="outfit_occ_ID">
-                    {{#each data}}
+                    {{#each data.rows}}
                     <option value="{{this.outfit_occ_id}}">{{this.outfit_occ_id}}</option>
                     {{/each}}
                 </select><br>                
