--- a/views/shoes.hbs
+++ b/views/shoes.hbs
@@ -32,16 +32,16 @@
         <table id="shoes">
             <thead>
                 <tr>
-                    {{#each data.[0]}}
+                    {{#each data.fields}}
                     <th>
-                        {{@key}}
+                        {{name}}
                     </th>
                     {{/each}}
                 </tr>
             </thead>
         
             <tbody>
-              {{#each data}}
+              {{#each data.rows}}
                 <tr>
                     <td>{{this.shoe_id}}</td>
                     <td>{{this.user_id}}</td>
@@ -60,7 +60,7 @@
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -80,13 +80,13 @@
                 <fieldset class="fields">
                     <label>Shoe ID</label>
                     <select name="updateShoeID" id="updateShoeID">
-                        {{#each data}}
+                        {{#each data.rows}}
                         <option value="{{this.shoe_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> User </label>
                     <select name="updateUserID" id="updateUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -107,7 +107,7 @@
                 <p>Are you sure you wish to delete the following?</p>
                 <label>Bottom ID</label>
                 <select name="deleteShoeID" id="deleteShoeID">
-                    {{#each data}}
+                    {{#each data.rows}}
                     <option value="{{this.shoe_id}}">{{this.name}}</option>
                     {{/each}}
                 </select><br>
