--- a/views/tops.hbs
+++ b/views/tops.hbs
@@ -32,16 +32,16 @@
         <table id="tops">
             <thead>
                 <tr>
-                    {{#each data.[0]}}
+                    {{#each data.fields}}
                     <th>
-                        {{@key}}
+                        {{name}}
                     </th>
                     {{/each}}
                 </tr>
             </thead>
         
             <tbody id="table_data">
-              {{#each data}}
+              {{#each data.rows}}
                 <tr>
                     <td>{{this.top_id}}</td>
                     <td>{{this.user_id}}</td>
@@ -61,7 +61,7 @@
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -82,13 +82,13 @@
                     <label>Top ID</label>
                     <select name="updateTopID" id="updateTopID">
                         <option value="">Select a Top</option>
-                        {{#each data}}
+                        {{#each data.rows}}
                         <option value="{{this.top_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> User </label>
                     <select name="updateUserID" id="updateUserID">
-                        {{#each users}}
+                        {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select><br>
@@ -109,7 +109,7 @@
                 <p>Are you sure you wish to delete the following?</p>
                 <label>Top ID</label>
                 <select name="deleteTopID" id="deleteTopID">
-                    {{#each data}}
+                    {{#each data.rows}}
                     <option value="{{this.top_id}}">{{this.name}}</option>
                     {{/each}}
                 </select><br>
