--- a/views/outfitsAccessories.hbs
+++ b/views/outfitsAccessories.hbs
@@ -108,20 +108,23 @@
 
         <p>&nbsp;</p>
         <div id="delete" style="display: block">
-        <form id="deleteOutfitAccessory">
-            <legend><strong>Delete Outfit Accessory Pair</strong></legend>
+            <form id="deleteItemForm" method="POST" action="/delete-item/OutfitsAccessories">
+                <input type="hidden" name="tableName" value="OutfitsAccessories">
+                <input type="hidden" name="idName" value="outfit_acc_id">
+                <legend><strong>Delete Top</strong></legend>
                 <fieldset class="fields">
-                <p>Are you sure you wish to delete the following?</p>
-                <label>Outfit-Accessory ID</label>
-                <select name="outfit_acc_ID" id="outfit_acc_ID">
-                    {{#each data.rows}}
-                    <option value="{{this.outfit_acc_id}}">{{this.outfit_acc_id}}</option>
-                    {{/each}}
-                </select><br>                
-            </fieldset>
-            <input class="btn" type="submit" id="deleteOutfitAccessory" value="Delete Outfit Accessory Pair">
+                    <p>Are you sure you wish to delete the following?</p>
+                    <label>Outfit Accessory ID</label>
+                    <select name="deleteItemID" id="deleteItemID">
+                        <option value="">Select Outfit Accessory Combination</option>
+                        {{#each data.rows}}
+                        <option value="{{this.outfit_acc_id}}">{{this.outfit_acc_id}}</option>
+                        {{/each}}
+                    </select><br>              
+                </fieldset>
+                <input class="btn" type="submit" value="Delete Outfit Accessory Combination">
                 <input class="btn" type="button" value="cancel">
-        </form> 
+            </form>
         </div>
 	</body>
 </html>
