--- a/views/accessories.hbs
+++ b/views/accessories.hbs
@@ -56,11 +56,13 @@
         <p>&nbsp;</p>
         </div> 
         <div id="insert" style="display: block">
-            <form id="addAccessory" method="POST" action="/add-accessory">
+            <form id="addAccessory" method="POST" action="/add-item/accessories">
+                <input type="hidden" name="page" value="accessories">
                 <legend><strong>Add New Accessory</strong></legend>
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
+                        <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
@@ -76,7 +78,8 @@
 
         <p>&nbsp;</p>
         <div id="update" style="display: block">
-            <form id="updateAccessory">
+            <form id="updateAccessory" method="POST" action="/update-item/accessories">
+                <input type="hidden" name="page" value="accessories">
                 <legend><strong>Update Accessory</strong></legend>
                 <fieldset class="fields">
                     <label>Accessory ID</label>
@@ -88,6 +91,7 @@
                     </select><br>
                     <label> User </label>
                     <select name="updateUserID" id="update =UserID">
+                        <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
@@ -103,21 +107,56 @@
 
         <p>&nbsp;</p>
         <div id="delete" style="display: block">
-        <form id="deleteAccessoryID" method="POST" action="/delete-accessory">
+        <form id="deleteAccessoryID" method="POST" action="/delete-item/accessories">
+            <input type="hidden" name="page" value="accessories">
             <legend><strong>Delete Accessory</strong></legend>
                 <fieldset class="fields">
-                <p>Are you sure you wish to delete the following?</p>
-                <label>Accessory ID</label>
+                <label>Select the Accessory you would like to delete</label>
                 <select name="deleteAccessoryID" id="deleteAccessoryID">
                     <option value="">Select Accessory</option>
                     {{#each data.rows}}
                     <option value="{{this.accessory_id}}">{{this.name}}</option>
                     {{/each}}
-                </select><br>              
+                </select><br>        
+                             
             </fieldset>
             <input class="btn" type="submit" id="deleteAccessoryID" value="Delete Accessory">
-                <input class="btn" type="button" value="cancel">
+            <input class="btn" type="button" value="cancel">
         </form> 
         </div>
 	</body>
 </html>
+
+<script>
+    function populateAccessoryInfo(accessoryId) {
+        fetch(`/accessories/${accessoryId}`)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error("Error fetching user data");
+                }
+                return response.json();
+            })
+            .then(accessoryData => {
+                // Populate the input fields with the fetched user data
+                document.getElementById("name").value = accessoryData.name;
+                document.getElementById("type").value = accessoryData.type;
+                document.getElementById("color").value = accessoryData.color;
+            })
+            .catch(error => {
+                console.error("Error:", error);
+            });
+    }
+
+    // Update the onchange event handler of the select element
+    document.getElementById("updateAccessoryID").addEventListener("change", function() {
+        var selectedAccessoryId = this.value; // Get the selected accessory ID
+        if (selectedAccessoryId) { // Ensure an accessory is selected
+            populateAccessoryInfo(selectedAccessoryId); // Call populateAccessoryInfo with the selected accessory ID
+        } else {
+            // Clear the input fields if no accessory is selected
+            document.getElementById("name").value = "";
+            document.getElementById("type").value = "";
+            document.getElementById("color").value = "";
+        }
+    });
+</script>
