--- a/views/outfitsAccessories.hbs
+++ b/views/outfitsAccessories.hbs
@@ -56,17 +56,20 @@
         <p>&nbsp;</p>
         </div> 
         <div id="insert" style="display: block">
-            <form id="addOutfitAccessory" method="POST" action="/add-outfitsAccessories">
+            <form id="addOutfitAccessory" method="POST" action="/add-item/outfitsAccessories">
+            <input type="hidden" name="page" value="outfitsAccessories">
                 <legend><strong>Add New Outfit with Accessory</strong></legend>
                 <fieldset class="fields">
                     <label> Outfit </label>
                     <select name="addOutfitID" id="addOutfitID">
+                        <option value="">Select Outfit</option>
                         {{#each outfits.rows}}
                         <option value="{{this.outfit_id}}">{{this.name}}</option>
                         {{/each}}
                     </select><br>
                     <label> Accessory </label>
                     <select name="addAccessoryID" id="updateAccessoryID">
+                         <option value="">Select Accessory</option>
                         {{#each accessories.rows}} 
                         <option value="{{this.accessory_id}}">{{this.name}}</option>
                         {{/each}}
@@ -108,21 +111,19 @@
 
         <p>&nbsp;</p>
         <div id="delete" style="display: block">
-            <form id="deleteItemForm" method="POST" action="/delete-item/OutfitsAccessories">
-                <input type="hidden" name="tableName" value="OutfitsAccessories">
-                <input type="hidden" name="idName" value="outfit_acc_id">
-                <legend><strong>Delete Top</strong></legend>
+            <form id="deleteOutfitAccID" method="POST" action="/delete-item/outfitsAccessories">
+                <input type="hidden" name="page" value="outfitsAccessories">
+                <legend><strong>Delete Outfit Accessory Pair</strong></legend>
                 <fieldset class="fields">
-                    <p>Are you sure you wish to delete the following?</p>
-                    <label>Outfit Accessory ID</label>
-                    <select name="deleteItemID" id="deleteItemID">
+                    <label>Select the outfit-accessory pair ID you wish to delete</label>
+                    <select name="deleteOutfitAccID" id="deleteOutfitAccID">
                         <option value="">Select Outfit Accessory Combination</option>
                         {{#each data.rows}}
                         <option value="{{this.outfit_acc_id}}">{{this.outfit_acc_id}}</option>
                         {{/each}}
                     </select><br>              
                 </fieldset>
-                <input class="btn" type="submit" value="Delete Outfit Accessory Combination">
+                <input class="btn" type="submit" id="deleteOutfitAccessory" value="Delete Outfit Accessory Combination">
                 <input class="btn" type="button" value="cancel">
             </form>
         </div>
