--- a/views/shoes.hbs
+++ b/views/shoes.hbs
@@ -55,11 +55,13 @@
         <p>&nbsp;</p>
         </div> 
         <div id="insert" style="display: block">
-            <form id="addShoe" method="POST" action="/add-shoe">
+            <form id="addShoe" method="POST" action="/add-item/shoes">
+            <input type="hidden" name="page" value="shoes">
                 <legend><strong>Add New Shoe</strong></legend>
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
+                        <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
@@ -101,12 +103,13 @@
 
         <p>&nbsp;</p>
         <div id="delete" style="display: block">
-        <form id="deleteShoe">
+        <form id="deleteShoeId" method="POST" action="/delete-item/shoes">
+            <input type="hidden" name="page" value="shoes">
             <legend><strong>Delete Shoe</strong></legend>
                 <fieldset class="fields">
-                <p>Are you sure you wish to delete the following?</p>
-                <label>Bottom ID</label>
+                <label>Select the shoes you would like to delete</label>
                 <select name="deleteShoeID" id="deleteShoeID">
+                    <option value="">Select Shoe</option>
                     {{#each data.rows}}
                     <option value="{{this.shoe_id}}">{{this.name}}</option>
                     {{/each}}
