--- a/views/tops.hbs
+++ b/views/tops.hbs
@@ -56,11 +56,13 @@
         <p>&nbsp;</p>
         </div> 
         <div id="insert" style="display: block">
-            <form id="addTop" method="POST" action="/add-top">
+            <form id="addTop" method="POST" action="/add-item/tops">
+            <input type="hidden" name="page" value="bottoms">
                 <legend><strong>Add New Top</strong></legend>
                 <fieldset class="fields">
                     <label> User </label>
                     <select name="addUserID" id="addUserID">
+                        <option value="">Select User</option>
                         {{#each users.rows}}
                         <option value="{{this.user_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
@@ -103,23 +105,21 @@
 
         <p>&nbsp;</p>
         <div id="delete" style="display: block">
-            <form id="deleteItemForm" method="POST" action="/delete-item/Tops">
-                <input type="hidden" name="tableName" value="Tops">
-                <input type="hidden" name="idName" value="top_id">
-                <legend><strong>Delete Top</strong></legend>
-                <fieldset class="fields">
-                    <p>Are you sure you wish to delete the following?</p>
-                    <label>Top ID</label>
-                    <select name="deleteItemID" id="deleteItemID">
-                        <option value="">Select Top</option>
-                        {{#each data.rows}}
-                        <option value="{{this.top_id}}">{{this.name}}</option>
-                        {{/each}}
-                    </select><br>              
-                </fieldset>
-                <input class="btn" type="submit" value="Delete Top">
-                <input class="btn" type="button" value="cancel">
-            </form>
+        <form id="deleteItemForm" method="POST" action="/delete-item/tops">
+            <input type="hidden" name="page" value="tops">
+            <legend><strong>Delete Top</strong></legend>
+            <fieldset class="fields">
+                <label>Select the top you would like to delete</label>
+                <select name="deleteTopID" id="deleteTopID">
+                    <option value="">Select Top</option>
+                    {{#each data.rows}}
+                    <option value="{{this.top_id}}">{{this.name}}</option>
+                    {{/each}}
+                </select><br>              
+            </fieldset>
+            <input class="btn" type="submit" id="DeleteTop" value="Delete Top">
+            <input class="btn" type="button" value="cancel">
+        </form>
         </div>
 	</body>
 </html>
